SET(SRC_LIST main.c)
MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir "${HELLO_SOURCE_DIR})
MESSAGE(STATUS "This is PROJECT_SOURCE_DIR  dir "${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "This is PROJECT_BINARY_DIR  dir "${PROJECT_BINARY_DIR})
ADD_EXECUTABLE(hello ${SRC_LIST})
